# Face-Finder

./: .gitignore  README.md  pyproject.toml
application/: app.py
application/business_logic/: biz_images.py  biz_logic_parent.py  biz_scan_for_faces.py  biz_sources.py
application/database/: README.md  db_driver.py  faces_in_image_driver.py  image_driver.py  source_driver.py
application/gui/: controller.py
application/gui/views/: view_logging.py
application/gui/views/view_main/: view_main.py
application/gui/views/view_main/widgets/: config_tab.py  right_panel.py
application/models/: face.py  faceInImage.py  image.py  person.py
application/objects/: faceInImage.py  image.py
application/persist/: data.db
application/scan/: probe.py  scan_tree.py
application/util/: garbage_manager.py  image_dumper.py  logger.py  verify_files_at_each_level_callback.py
